k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inv-mgmt-svc
  labels:
    app: inv-mgmt
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: inv-mgmt
